# C-

./: CMakeLists.txt  Utils.cpp  Utils.h  main.cpp
Domain/: OperaDeArta.cpp  OperaDeArta.h  Sculptura.cpp  Sculptura.h  Tablou.cpp  Tablou.h
Exceptions/: ReadFromFileException.h  RepoException.h
Fisiere/: Opere.txt
Repository/: Repo.cpp  Repo.h  RepoFile.cpp  RepoFile.h
Service/: Service.cpp  Service.h
Tests/: TestRepo.cpp  TestRepo.h  tests.cpp  tests.h
UI/: UI.cpp  UI.h
Validator/: ValidationException.h  Validator.cpp  Validator.h  ValidatorSculptura.cpp  ValidatorSculptura.h  ValidatorTablou.cpp  ValidatorTablou.h
